new style added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
             <ul class="vertical-navbar-items">
               <li><a href="packages.html" draggable="false">شبرغان</a></li>
-              <li><a href="packages.html" draggable="false">آقچه</a></li>
+              <li><a href="packages.html?data=aqchah" draggable="false">آقچه</a></li>
               <li><a href="packages.html" draggable="false">فیض آباد</a></li>
               <li>
                 <a href="packages.html" draggable="false">خواجه دوه کوه</a>
@@ -77,9 +77,9 @@
           <li>
             <div><i class="fa-solid fa-angle-left"></i>بلخ</div>
             <ul class="vertical-navbar-items">
-              <li><a href="packages.html" draggable="false">مزارشریف</a></li>
-              <li><a href="packages.html" draggable="false">بلخ</a></li>
-              <li><a href="packages.html" draggable="false">کود برق</a></li>
+              <li><a href="packages.html?data=mazar_e_sharif" draggable="false">مزارشریف</a></li>
+              <li><a href="packages.html?data=balkh" draggable="false">بلخ</a></li>
+              <li><a href="packages.html?data=code_barq" draggable="false">کود برق</a></li>
             </ul>
           </li>
           <li>
