--- a/packages.html
+++ b/packages.html
@@ -55,7 +55,7 @@
               <div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
               <ul class="vertical-navbar-items">
                 <li><a href="packages.html">شبرغان</a></li>
-                <li><a href="packages.html">آقچه</a></li>
+                <li><a href="packages.html?data=aqchah">آقچه</a></li>
                 <li><a href="packages.html">فیض آباد</a></li>
                 <li><a href="packages.html">خواجه دوه کوه</a></li>
                 <li><a href="packages.html">درزآب</a></li>
@@ -75,8 +75,8 @@
               <div><i class="fa-solid fa-angle-left"></i>بلخ</div>
               <ul class="vertical-navbar-items">
                 <li><a href="packages.html?data=mazar_e_sharif">مزارشریف</a></li>
-                <li><a href="packages.html">بلخ</a></li>
-                <li><a href="packages.html">کود برق</a></li>
+                <li><a href="packages.html?data=balkh">بلخ</a></li>
+                <li><a href="packages.html?data=code_barq">کود برق</a></li>
               </ul>
             </li>
             <li>
