--- a/packages.html
+++ b/packages.html
@@ -45,30 +45,30 @@
             <li>
               <div><i class="fa-solid fa-angle-left"></i>فاریاب</div>
               <ul class="vertical-navbar-items">
-                <li><a href="packages.html">میمنه</a></li>
-                <li><a href="packages.html">اندخوی</a></li>
-                <li><a href="packages.html">شیرین تگاب</a></li>
-                <li><a href="packages.html">کولیان</a></li>
+                <li><a href="packages.html?data=maymana">میمنه</a></li>
+                <li><a href="packages.html?data=andkhoy">اندخوی</a></li>
+                <li><a href="packages.html?data=shirin_tagab">شیرین تگاب</a></li>
+                <li><a href="packages.html?data=kolian">کولیان</a></li>
               </ul>
             </li>
             <li>
               <div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
               <ul class="vertical-navbar-items">
-                <li><a href="packages.html">شبرغان</a></li>
-                <li><a href="packages.html?data=aqchah">آقچه</a></li>
-                <li><a href="packages.html">فیض آباد</a></li>
-                <li><a href="packages.html">خواجه دوه کوه</a></li>
-                <li><a href="packages.html">درزآب</a></li>
-                <li><a href="packages.html">قوش تپه</a></li>
+                <li><a href="packages.html?data=sheberghan">شبرغان</a></li>
+                <li><a href="packages.html?data=aqcha">آقچه</a></li>
+                <li><a href="packages.html?data=fayzabad">فیض آباد</a></li>
+                <li><a href="packages.html?data=khwaja_du_koh">خواجه دوه کوه</a></li>
+                <li><a href="packages.html?data=darzab">درزآب</a></li>
+                <li><a href="packages.html?data=qush_tepa">قوش تپه</a></li>
               </ul>
             </li>
             <li>
               <div><i class="fa-solid fa-angle-left"></i>سمنگان</div>
               <ul class="vertical-navbar-items">
-                <li><a href="packages.html">ایبک</a></li>
-                <li><a href="packages.html">خرم</a></li>
-                <li><a href="packages.html">سارباغ</a></li>
-                <li><a href="packages.html"> دره صوف بالا</a></li>
+                <li><a href="packages.html?data=aybak">ایبک</a></li>
+                <li><a href="packages.html?data=khuram">خرم</a></li>
+                <li><a href="packages.html?data=sarbagh">سارباغ</a></li>
+                <li><a href="packages.html?data=darah_sof_balla"> دره صوف بالا</a></li>
               </ul>
             </li>
             <li>
@@ -82,10 +82,10 @@
             <li>
               <div><i class="fa-solid fa-angle-left"></i>سرپل</div>
               <ul class="vertical-navbar-items">
-                <li><a href="packages.html">سرپل</a></li>
-                <li><a href="packages.html">سانچارک</a></li>
-                <li><a href="packages.html">گوسفندی</a></li>
-                <li><a href="packages.html">بلخاب</a></li>
+                <li><a href="packages.html?data=sare_pol">سرپل</a></li>
+                <li><a href="packages.html?data=sancharak">سانچارک</a></li>
+                <li><a href="packages.html?data=gosfandi">گوسفندی</a></li>
+                <li><a href="packages.html?data=balkhab">بلخاب</a></li>
               </ul>
             </li>
           </ul>
@@ -120,12 +120,10 @@
                     <i class="fa-solid fa-angle-left"></i> <span>فاریاب</span>
                   </div>
                   <ul class="districts">
-                    <li class="district"><a href="packages.html">میمنه</a></li>
-                    <li class="district"><a href="packages.html">اندخوی</a></li>
-                    <li class="district">
-                      <a href="packages.html">شیرین تگاب</a>
-                    </li>
-                    <li class="district"><a href="packages.html">کولیان</a></li>
+                    <li class="district"><a href="packages.html?data=maymana">میمنه</a></li>
+                    <li class="district"><a href="packages.html?data=andkhoy">اندخوی</a></li>
+                    <li class="district"><a href="packages.html?data=shirin_tagab">شیرین تگاب</a> </li>
+                    <li class="district"><a href="packages.html?data=kolian">کولیان</a></li>
                   </ul>
                 </li>
 
@@ -134,9 +132,10 @@
                     <i class="fa-solid fa-angle-left"></i> <span>سمنگان</span>
                   </div>
                   <ul class="districts">
-                    <li class="district"><a href="packages.html">آیبک</a></li>
-                    <li class="district"><a href="packages.html">خرم</a></li>
-                    <li class="district"><a href="packages.html">سارباغ</a></li>
+                    <li class="district"><a href="packages.html?data=aybak">آیبک</a></li>
+                    <li class="district"><a href="packages.html?data=khuram">خرم</a></li>
+                    <li class="district"><a href="packages.html?data=sarbagh">سارباغ</a></li>
+                    <li class="district"><a href="packages.html?data=darah_sof_balla	">دره صوف بالا</a></li>
                   </ul>
                 </li>
 
@@ -145,18 +144,12 @@
                     <i class="fa-solid fa-angle-left"></i> <span>جوزجان</span>
                   </div>
                   <ul class="districts">
-                    <li class="district"><a href="packages.html">شبرغان</a></li>
-                    <li class="district"><a href="packages.html">آقچه</a></li>
-                    <li class="district">
-                      <a href="packages.html">فیض آباد</a>
-                    </li>
-                    <li class="district">
-                      <a href="packages.html">خواجه دوه کوه</a>
-                    </li>
-                    <li class="district"><a href="packages.html">درزآب</a></li>
-                    <li class="district">
-                      <a href="packages.html">قوش تپه</a>
-                    </li>
+                    <li class="district"><a href="packages.html?data=sheberghan">شبرغان</a></li>
+                    <li class="district"><a href="packages.html?data=aqcha">آقچه</a></li>
+                    <li class="district"><a href="packages.html?data=fayzabad">فیض آباد</a></li>
+                    <li class="district"><a href="packages.html?data=khwaja_du_koh">خواجه دوه کوه</a></li>
+                    <li class="district"><a href="packages.html?data=darzab">درزآب</a></li>
+                    <li class="district"><a href="packages.html?data=qush_tepa">قوش تپه</a></li>
                   </ul>
                 </li>
 
@@ -165,13 +158,9 @@
                     <i class="fa-solid fa-angle-left"></i> <span>بلخ</span>
                   </div>
                   <ul class="districts">
-                    <li class="district">
-                      <a href="packages.html">مزارشریف</a>
-                    </li>
-                    <li class="district"><a href="packages.html">بلخ</a></li>
-                    <li class="district">
-                      <a href="packages.html">کود برق</a>
-                    </li>
+                    <li class="district"><a href="packages.html?data=mazar_e_sharif">مزارشریف</a></li>
+                    <li class="district"><a href="packages.html?data=balkh">بلخ</a></li>
+                    <li class="district"> <a href="packages.html?data=code_barq">کود برق</a></li>
                   </ul>
                 </li>
 
@@ -180,14 +169,10 @@
                     <i class="fa-solid fa-angle-left"></i> <span>سرپل</span>
                   </div>
                   <ul class="districts">
-                    <li class="district"><a href="packages.html">سرپل</a></li>
-                    <li class="district">
-                      <a href="packages.html">سانچارک</a>
-                    </li>
-                    <li class="district">
-                      <a href="packages.html">گوسفندی</a>
-                    </li>
-                    <li class="district"><a href="packages.html">بلخاب</a></li>
+                    <li class="district"><a href="packages.html?data=sare_pol">سرپل</a></li>
+                    <li class="district"><a href="packages.html?data=sancharak">سانچارک</a></li>
+                    <li class="district"><a href="packages.html?data=gosfandi">گوسفندی</a></li>
+                    <li class="district"><a href="packages.html?data=balkhab">بلخاب</a></li>
                   </ul>
                 </li>
               </ul>
