--- a/index.html
+++ b/index.html
@@ -42,36 +42,30 @@
           <li>
             <div><i class="fa-solid fa-angle-left"></i>فاریاب</div>
             <ul class="vertical-navbar-items">
-              <li><a href="packages.html" draggable="false">میمنه</a></li>
-              <li><a href="packages.html" draggable="false">اندخوی</a></li>
-              <li>
-                <a href="packages.html" draggable="false">شیرین تگاب</a>
-              </li>
-              <li><a href="packages.html" draggable="false">کولیان</a></li>
+              <li><a href="packages.html?data=maymana" draggable="false">میمنه</a></li>
+              <li><a href="packages.html?data=andkhoy" draggable="false">اندخوی</a></li>
+              <li><a href="packages.html?data=shirin_tagab" draggable="false">شیرین تگاب</a> </li>
+              <li><a href="packages.html?data=kolian" draggable="false">کولیان</a></li>
             </ul>
           </li>
           <li>
             <div><i class="fa-solid fa-angle-left"></i>جوزجان</div>
             <ul class="vertical-navbar-items">
-              <li><a href="packages.html" draggable="false">شبرغان</a></li>
-              <li><a href="packages.html?data=aqchah" draggable="false">آقچه</a></li>
-              <li><a href="packages.html" draggable="false">فیض آباد</a></li>
-              <li>
-                <a href="packages.html" draggable="false">خواجه دوه کوه</a>
-              </li>
-              <li><a href="packages.html" draggable="false">درزآب</a></li>
-              <li><a href="packages.html" draggable="false">قوش تپه</a></li>
+              <li><a href="packages.html?data=sheberghan" draggable="false">شبرغان</a></li>
+              <li><a href="packages.html?data=aqcha" draggable="false">آقچه</a></li>
+              <li><a href="packages.html?data=fayzabad" draggable="false">فیض آباد</a></li>
+              <li><a href="packages.html?data=khwaja_du_koh" draggable="false">خواجه دوه کوه</a></li>
+              <li><a href="packages.html?data=darzab" draggable="false">درزآب</a></li>
+              <li><a href="packages.html?data=qush_tepa" draggable="false">قوش تپه</a></li>
             </ul>
           </li>
           <li>
             <div><i class="fa-solid fa-angle-left"></i>سمنگان</div>
             <ul class="vertical-navbar-items">
-              <li><a href="packages.html" draggable="false">ایبک</a></li>
-              <li><a href="packages.html" draggable="false">خرم</a></li>
-              <li><a href="packages.html" draggable="false">سارباغ</a></li>
-              <li>
-                <a href="packages.html" draggable="false"> دره صوف بالا</a>
-              </li>
+              <li><a href="packages.html?data=aybak" draggable="false">ایبک</a></li>
+              <li><a href="packages.html?data=khuram" draggable="false">خرم</a></li>
+              <li><a href="packages.html?data=sarbagh" draggable="false">سارباغ</a></li>
+              <li><a href="packages.html?data=darah_sof_balla" draggable="false"> دره صوف بالا</a></li>
             </ul>
           </li>
           <li>
@@ -85,10 +79,10 @@
           <li>
             <div><i class="fa-solid fa-angle-left"></i>سرپل</div>
             <ul class="vertical-navbar-items">
-              <li><a href="packages.html" draggable="false">سرپل</a></li>
-              <li><a href="packages.html" draggable="false">سانچارک</a></li>
-              <li><a href="packages.html" draggable="false">گوسفندی</a></li>
-              <li><a href="packages.html" draggable="false">بلخاب</a></li>
+              <li><a href="packages.html?data=sare_pol" draggable="false">سرپل</a></li>
+              <li><a href="packages.html?data=sancharak" draggable="false">سانچارک</a></li>
+              <li><a href="packages.html?data=gosfandi" draggable="false">گوسفندی</a></li>
+              <li><a href="packages.html?data=balkhab" draggable="false">بلخاب</a></li>
             </ul>
           </li>
         </ul>
@@ -127,35 +121,10 @@
                   <i class="fa-solid fa-angle-left"></i> <span>فاریاب</span>
                 </div>
                 <ul class="districts">
-                  <li class="district">
-                    <a href="packages.html" draggable="false">میمنه</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">اندخوی</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">شیرین تگاب</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">کولیان</a>
-                  </li>
-                </ul>
-              </li>
-
-              <li class="sub-menu-item">
-                <div class="province">
-                  <i class="fa-solid fa-angle-left"></i> <span>سمنگان</span>
-                </div>
-                <ul class="districts">
-                  <li class="district">
-                    <a href="packages.html" draggable="false">آیبک</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">خرم</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">سارباغ</a>
-                  </li>
+                  <li class="district"><a href="packages.html?data=maymana" draggable="false">میمنه</a></li>
+                  <li class="district"><a href="packages.html?data=andkhoy" draggable="false">اندخوی</a></li>
+                  <li class="district"><a href="packages.html?data=shirin_tagab" draggable="false">شیرین تگاب</a></li>
+                  <li class="district"><a href="packages.html?data=kolian" draggable="false">کولیان</a></li>
                 </ul>
               </li>
 
@@ -164,24 +133,24 @@
                   <i class="fa-solid fa-angle-left"></i> <span>جوزجان</span>
                 </div>
                 <ul class="districts">
-                  <li class="district">
-                    <a href="packages.html" draggable="false">شبرغان</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">آقچه</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">فیض آباد</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">خواجه دوه کوه</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">درزآب</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">قوش تپه</a>
-                  </li>
+                  <li class="district"><a href="packages.html?data=sheberghan" draggable="false">شبرغان</a></li>
+                  <li class="district"><a href="packages.html?data=aqcha" draggable="false">آقچه</a></li>
+                  <li class="district"><a href="packages.html?data=fayzabad" draggable="false">فیض آباد</a></li>
+                  <li class="district"><a href="packages.html?data=khwaja_du_koh" draggable="false">خواجه دوه کوه</a></li>
+                  <li class="district"><a href="packages.html?data=darzab" draggable="false">درزآب</a></li>
+                  <li class="district"><a href="packages.html?data=qush_tepa" draggable="false">قوش تپه</a></li>
+                </ul>
+              </li>
+
+              <li class="sub-menu-item">
+                <div class="province">
+                  <i class="fa-solid fa-angle-left"></i> <span>سمنگان</span>
+                </div>
+                <ul class="districts">
+                  <li class="district"> <a href="packages.html?data=aybak" draggable="false">آیبک</a></li>
+                  <li class="district"><a href="packages.html?data=khuram" draggable="false">خرم</a></li>
+                  <li class="district"><a href="packages.html?data=sarbagh" draggable="false">سارباغ</a></li>
+                  <li class="district"><a href="packages.html?data=darah_sof_balla" draggable="false">دره صوف بالا</a></li>
                 </ul>
               </li>
 
@@ -190,15 +159,9 @@
                   <i class="fa-solid fa-angle-left"></i> <span>بلخ</span>
                 </div>
                 <ul class="districts">
-                  <li class="district">
-                    <a href="packages.html" draggable="false">مزارشریف</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">بلخ</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">کود برق</a>
-                  </li>
+                  <li class="district"><a href="packages.html?data=mazar_e_sharif" draggable="false">مزارشریف</a></li>
+                  <li class="district"><a href="packages.html?data=balkh" draggable="false">بلخ</a></li>
+                  <li class="district"><a href="packages.html?data=code_barq" draggable="false">کود برق</a></li>
                 </ul>
               </li>
 
@@ -207,18 +170,10 @@
                   <i class="fa-solid fa-angle-left"></i> <span>سرپل</span>
                 </div>
                 <ul class="districts">
-                  <li class="district">
-                    <a href="packages.html" draggable="false">سرپل</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">سانچارک</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">گوسفندی</a>
-                  </li>
-                  <li class="district">
-                    <a href="packages.html" draggable="false">بلخاب</a>
-                  </li>
+                  <li class="district"><a href="packages.html?data=sare_pol" draggable="false">سرپل</a></li>
+                  <li class="district"><a href="packages.html?data=sancharak" draggable="false">سانچارک</a></li>
+                  <li class="district"><a href="packages.html?data=gosfandi" draggable="false">گوسفندی</a></li>
+                  <li class="district"><a href="packages.html?data=balkhab" draggable="false">بلخاب</a></li>
                 </ul>
               </li>
             </ul>
