--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style/footer.css" />
   <link rel="stylesheet" href="assets/FontAwesome.Pro.6.4.2/css/all.css" />
   <link rel="stylesheet" href="style/icon.css">
+      <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 
 <body>
@@ -306,64 +307,21 @@
       </div>
 
       <div class="content">
-        <p>
-          لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-          استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در
-          ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-          کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی
-          در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را
-          می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی
-          الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این
-          صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و
-          شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای
-          اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد
-          استفاده قرار گیرد.
-        </p>
-        <br />
-        <p>
-          لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-          استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در
-          ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-          کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی
-          در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را
-          می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی
-          الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این
-          صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و
-          شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای
-          اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد
-          استفاده قرار گیرد.
-        </p>
+        
+        <ul>
+          <li>اخد تقدیر نامه از شرکت خدمات مخابراتی اتصالات افغانستان در سال 2021</li>
+          <li>اخد عنوان بهترین عرضه کننده انترنیت در بین شرکت های جدیدالتاسیس در سال 2021</li>
+          <li>عرضه انترنیت پرسرعت در دور دسترین نقاط شمال افغانستان</li>
+        </ul>
+
       </div>
 
       <div class="content">
-        <p>
-          لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-          استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در
-          ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-          کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی
-          در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را
-          می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی
-          الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این
-          صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و
-          شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای
-          اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد
-          استفاده قرار گیرد.
-        </p>
-        <br />
-        <br />
-        <p>
-          لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-          استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در
-          ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-          کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی
-          در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را
-          می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی
-          الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این
-          صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و
-          شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای
-          اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد
-          استفاده قرار گیرد.
-        </p>
+        <ul>
+          <li>ریسیلر رسمی شرکت خدمات مخابراتی اتصالات در زون شمال افغانستان</li>
+          <li>جواز فعالیت از وزارت مالیه امارت اسلامی افغانستان</li>
+          <li>جواز رسمی فعالیت از اداره تنظیم خدمات مخابراتی افغانستان (اترا)</li>
+        </ul>
       </div>
     </div>
   </div>
