--- a/packages.html
+++ b/packages.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style/footer.css" />
     <link rel="stylesheet" href="style/loading.css" />
     <link rel="stylesheet" href="style/icon.css" />
-    <title>Package</title>
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
+    <title>Yarqin Mirzad</title>
   </head>
   <body>
     <div class="loading-container">
@@ -186,10 +187,13 @@
       </nav>
     </div>
 
+    <div class="district-info">
+      <h2></h2>
+    </div>
+
     <div class="packages">
       <div class="package-controller tabs">
       </div>
-
       <div class="content_box">
 
         <!-- <div class="content active">
